# FAL

./: CMakeLists.txt  README.md  install.sh
docs/: Doxyfile  language.md
include/: CharacterToken.hpp  ParseTreeNode.hpp  Parser.hpp  ProgramParseTreeNode.hpp  StateDeclParseTreeNode.hpp  StringToken.hpp  Token.hpp  TokenKind.hpp  Tokeniser.hpp  TransitionDeclParseTreeNode.hpp  dot.hpp  generation.hpp  image.hpp  semantics.cpp  semantics.hpp
src/: dot.cpp  fal.cpp  generation.cpp  image.cpp  semantics.cpp
